force-app/main/default/objects/Maquina_de_cafe__c/Maquina_de_cafe__c.object-meta.xml
<CustomObject>
    <label>Máquina de café</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Máquinas de café</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>