force-app/main/default/objects/Maquina_de_cafe__c/fields/Consumo_m_nimo_mensual__c.field-meta.xml
<CustomField>
    <fullName>Consumo_m_nimo_mensual__c</fullName>
    <label>Consumo mínimo mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>