force-app/main/default/objects/Maquina_de_cafe__c/fields/Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n__c</fullName>
    <label>Descripción</label>
    <length>80</length>
    <type>Text</type>
</CustomField>