force-app/main/default/objects/Maquina_de_cafe__c/fields/Provisi_n_Agua__c.field-meta.xml
<CustomField>
    <fullName>Provisi_n_Agua__c</fullName>
    <label>Provisión Agua</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autónoma</fullName>
            </value>
            <value>
                <fullName>Provisión red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>