force-app/main/default/objects/Maquina_de_cafe__c/fields/Requerimientos_T_cnicos__c.field-meta.xml
<CustomField>
    <fullName>Requerimientos_T_cnicos__c</fullName>
    <label>Requerimientos Técnicos</label>
    <type>TextArea</type>
</CustomField>