force-app/main/default/objects/Maquina_de_cafe__c/fields/Tipo_de_caf__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_caf__c</fullName>
    <label>Tipo de café</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grano</fullName>
            </value>
            <value>
                <fullName>Molido</fullName>
            </value>
            <value>
                <fullName>Cápsula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>