force-app/main/default/objects/Maquina_de_cafe__c/fields/Tipo_de_leche__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_leche__c</fullName>
    <label>Tipo de leche</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polvo</fullName>
            </value>
            <value>
                <fullName>Liquida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>