force-app/main/default/objects/Maquina_de_cafe__c/fields/Total_adicionales__c.field-meta.xml
<CustomField>
    <fullName>Total_adicionales__c</fullName>
    <label>Total adicionales</label>
    <summarizedField>Adicional_M_quina_de_Caf__c.Precio__c</summarizedField>
    <summaryForeignKey>Adicional_M_quina_de_Caf__c.M_quina_de_caf__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>